<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUpActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="173dp"
        android:layout_height="101dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_account"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/fill_information"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_edittext_black_stroke"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="text"
        android:paddingLeft="16dp"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Email"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUserName" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_edittext_black_stroke"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_edittext_black_stroke"
        android:ems="10"
        android:hint="@string/enter_password"

        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
    <ImageView
        android:id="@+id/imgShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toTopOf="@+id/edtPassword"
        app:srcCompat="@mipmap/ic_eye_off" />

    <EditText
        android:id="@+id/edtFullName"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/rounded_edittext_black_stroke"
        android:ems="10"
        android:hint="@string/enter_full_name"

        android:inputType="text"
        android:paddingLeft="16dp"
        android:text=""
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rounded_pink_button_background"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/txtMessageError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text=""
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/textview8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_account"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <TextView
        android:id="@+id/txtLogin"
        android:onClick="openLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/log_in"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>